...
      component={DoctorTabs}
      options={{ headerShown: false }}
    />
    <DoctorStack.Screen
      name="DoctorNewAppointment"
      component={DoctorNewAppointmentScreen}
      options={{ title: 'New appointment', headerBackTitle: 'Back' }}
    />
    <DoctorStack.Screen
      name="DoctorAppointmentDetail"
      component={DoctorAppointmentDetailScreen}
      options={{ title: 'Appointment', headerBackTitle: 'Back' }}
    />
...
